--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,20 +16,12 @@ pandas==2.1.3
 openpyxl==3.1.2
 xlrd==2.0.1
 
-# ML/NLP
-transformers==4.35.2
-torch==2.1.1
-scikit-learn==1.3.2
+# ML/NLP - Lightweight (VADER for sentiment analysis)
 nltk==3.8.1
-spacy==3.7.2
-
-# Caching
-redis==5.0.1
-hiredis==2.2.3
+scikit-learn==1.3.2
 
 # PDF Generation
 reportlab==4.0.7
-weasyprint==60.1
 
 # Utilities
 pydantic==2.5.0
